<resources>
    <string name="app_name">Charagram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="no_tengo_cuenta">¿No tienes cuenta?,</string>
    <string name="crea_aquí">Crea Aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_usuarionew">Usuario</string>
    <string name="hint_clavenew">Contraseña</string>
    <string name="hint_confirmarclave">Confirmar Contraseña</string>
    <string name="text_button_nuevousuario">Únete</string>
    <string name="toolbar_tittle_nuevacuenta">Crear Cuenta</string>
    <string name="nombreusuario_card">Daniel Ripas</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 Dias</string>
    <string name="likenumbercard">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondworddatail">Me Gusta</string>
    <string name="titleimagen_datalle">\"Todos Somos Distintos\"</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
